--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-architect
 title: Bengisu Öniz Progress Journal
 description: BDA 503 Fall 2017 - MEF University
